--- a/Appendices/Results.tex
+++ b/Appendices/Results.tex
@@ -1,4 +1,4 @@
-\section{Results} \label{appendix:results}
+\section{Procedures for Selecting Background Variables, Estimated Treatment Effects, and Estimated Combining Functions} \label{appendix:results}
 
 \noindent In this appendix we first explain our method for selecting the background variables that we control for when estimating treatment effects.\footnote{This is a separate discussion from the election of variables to forecast life-cycle profiles of labor income and other outcomes. For that discussion see Appendix~\ref{appendix:methodology}.} Then, we present the treatment effects of the center-based treatment in ABC/CARE estimates for the 95 main outcomes we consider. For each set of estimates, we first present a summary of the effect of the program using a combining function counting the number of socially positive treatment effects. We then present tables of treatment effect estimates for each outcome. Finally, we test for statistically significant treatment effects using the step-down procedure to test multiple hypotheses.\\
 
@@ -14,6 +14,9 @@
 
 \noindent Let $\mathcal{M}$ be the set of all the models we consider. In our application, $\mathcal{M}$ consists of all linear regressions of an outcome of interest on the different combinations of background variables. $m \in \mathcal{M}$ is one of such models. We choose the model minimizing the Bayesian Information Criterion (BIC) by ranking them according to their likelihood. That is, according to their posterior probability given the data. The data, in this case, are the dependent variable being predicted together with the background variables in each combination. We denote this by $\Pr( m | \text{Data} )$.\\
 
+\noindent \textbf{[JJH: Do we account for this in constructing the bootstrap?] [JLG: That is correct. We state this in Appendix C.6.2., step 3.]}
+
+\pagebreak
 \noindent Using Bayes Rule and the law of total probability, 
 
 \begin{eqnarray}
@@ -134,3 +137,4 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 \noindent Beginning with Table~\ref{table:abccare_rslt_pooled_cat0}, we display treatment effects by outcome. We divide the tables by different blocks of related outcomes. In each table we also present one or two factors constructed with the methodology in Section~\ref{section:accendog}. The idea behind doing this is to recover a ``latent'' outcome summarizing the outcomes in the table (e.g., latent IQ across IQ from ages 2 to 5). That is, measure the latent outcome using outcomes at various ages as measures of this latent. Testing for treatment effects on this factor it is yet another alternative to summarize treatment effects across a block of outcomes.
 
 \input{AppResOutput/1_abccare_appendix}
+\doublespacing
