add p-value to the f stat

--- a/output/abccare_endogdurb_si30y_inc_labor_scont.tex
+++ b/output/abccare_endogdurb_si30y_inc_labor_scont.tex
@@ -1,4 +1,4 @@
-% matrix: allsi30y_inc_labor_scont file: abccare_endogdurb_si30y_inc_labor_scont.tex   2 Nov 2016 12:24:05
+% matrix: allsi30y_inc_labor_scont file: abccare_endogdurb_si30y_inc_labor_scont.tex   8 Nov 2016 14:47:17
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
@@ -10,9 +10,10 @@ Cognitive &            . &            . &       758.28 &         0.43 &         
 NonCognitive &            . &            . &      -342.62 &         0.52 &            . &            . &     7,275.49 &         0.09 \\  
 Constant &    10,239.82 &         0.28 &    16,530.50 &         0.22 &   -23,140.28 &         0.80 &   -80,679.09 &         0.96 \\  
 F-stat &         2.27 &            . &         1.80 &            . &        11.89 &            . &         7.91 &            . \\  
-R2 &         0.03 &            . &         0.07 &            . &         0.30 &            . &         0.40 &            . \\  
-Observations &        66.00 &            . &        51.00 &            . &        65.00 &            . &        63.00 &            . \\  
-DWH &            . &            . &         1.70 &            . &            . &            . &         4.14 &            . \\  
+R2 &         0.42 &            . &         0.41 &            . &         0.42 &            . &         0.01 &            . \\  
+Observations &         0.03 &            . &         0.07 &            . &         0.30 &            . &         0.40 &            . \\  
+DWH &        66.00 &            . &        51.00 &            . &        65.00 &            . &        63.00 &            . \\  
+pDWH &            . &            . &         1.70 &            . &            . &            . &         4.14 &            . \\  
 pDWH &            . &            . &         0.45 &            . &            . &            . &         0.09 &            . \\  
 \hline \hline \end{tabular}
 \end{table}
