--- a/output/abccare_endogdurb_si30y_inc_labor_spool.tex
+++ b/output/abccare_endogdurb_si30y_inc_labor_spool.tex
@@ -1,4 +1,4 @@
-% matrix: allsi30y_inc_labor_spool file: abccare_endogdurb_si30y_inc_labor_spool.tex   2 Nov 2016 12:25:20
+% matrix: allsi30y_inc_labor_spool file: abccare_endogdurb_si30y_inc_labor_spool.tex   8 Nov 2016 14:48:43
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
@@ -10,9 +10,10 @@ Cognitive &            . &            . &     4,260.39 &         0.16 &         
 NonCognitive &            . &            . &     2,899.66 &         0.25 &            . &            . &     7,557.01 &         0.05 \\  
 Constant &     4,443.37 &         0.41 &     9,166.30 &         0.38 &   -78,053.28 &         0.95 &   -75,621.84 &         0.87 \\  
 F-stat &         2.50 &            . &         1.90 &            . &         5.87 &            . &         5.37 &            . \\  
-R2 &         0.02 &            . &         0.04 &            . &         0.20 &            . &         0.25 &            . \\  
-Observations &       132.00 &            . &       100.00 &            . &       130.00 &            . &       133.00 &            . \\  
-DWH &            . &            . &         2.07 &            . &            . &            . &         2.92 &            . \\  
+R2 &         0.29 &            . &         0.31 &            . &         0.29 &            . &         0.01 &            . \\  
+Observations &         0.02 &            . &         0.04 &            . &         0.20 &            . &         0.25 &            . \\  
+DWH &       132.00 &            . &       100.00 &            . &       130.00 &            . &       133.00 &            . \\  
+pDWH &            . &            . &         2.07 &            . &            . &            . &         2.92 &            . \\  
 pDWH &            . &            . &         0.31 &            . &            . &            . &         0.19 &            . \\  
 \hline \hline \end{tabular}
 \end{table}
