--- a/output/abccare_endogdurb_si30y_inc_labor_streat.tex
+++ b/output/abccare_endogdurb_si30y_inc_labor_streat.tex
@@ -1,4 +1,4 @@
-% matrix: allsi30y_inc_labor_streat file: abccare_endogdurb_si30y_inc_labor_streat.tex   2 Nov 2016 12:22:53
+% matrix: allsi30y_inc_labor_streat file: abccare_endogdurb_si30y_inc_labor_streat.tex   8 Nov 2016 14:45:54
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
@@ -10,9 +10,10 @@ Cognitive &            . &            . &     2,766.35 &         0.40 &         
 NonCognitive &            . &            . &     7,600.33 &         0.18 &            . &            . &     6,223.32 &         0.19 \\  
 Constant &     3,900.73 &         0.47 &    10,553.93 &         0.42 &  -122,709.85 &         0.91 &  -109,410.81 &         0.76 \\  
 F-stat &         1.72 &            . &         2.45 &            . &         4.59 &            . &         4.95 &            . \\  
-R2 &         0.02 &            . &         0.10 &            . &         0.26 &            . &         0.33 &            . \\  
-Observations &        64.00 &            . &        49.00 &            . &        65.00 &            . &        63.00 &            . \\  
-DWH &            . &            . &         2.49 &            . &            . &            . &         2.03 &            . \\  
+R2 &         0.38 &            . &         0.21 &            . &         0.38 &            . &         0.06 &            . \\  
+Observations &         0.02 &            . &         0.10 &            . &         0.26 &            . &         0.33 &            . \\  
+DWH &        64.00 &            . &        49.00 &            . &        65.00 &            . &        63.00 &            . \\  
+pDWH &            . &            . &         2.49 &            . &            . &            . &         2.03 &            . \\  
 pDWH &            . &            . &         0.21 &            . &            . &            . &         0.31 &            . \\  
 \hline \hline \end{tabular}
 \end{table}
