p-values for the f

--- a/output/cnlsy_endogdurb_si30y_inc_labor_spool.tex
+++ b/output/cnlsy_endogdurb_si30y_inc_labor_spool.tex
@@ -1,18 +1,19 @@
-% matrix: allsi30y_inc_labor_spool file: cnlsy_endogdurb_si30y_inc_labor_spool.tex   2 Nov 2016 12:16:12
+% matrix: allsi30y_inc_labor_spool file: cnlsy_endogdurb_si30y_inc_labor_spool.tex   8 Nov 2016 15:13:48
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-Mother'sEducation &     2,317.52 &         0.00 &     2,262.79 &         0.00 &       316.78 &         0.23 &       379.54 &         0.32 \\  
-PIAT(5-7) &            . &            . &            . &            . &       263.98 &         0.00 &       471.53 &         0.00 \\  
-Education(30) &            . &            . &            . &            . &     3,647.75 &         0.00 &     4,351.32 &         0.00 \\  
-LaborIncome(21) &            . &            . &            . &            . &         0.68 &         0.00 &         0.79 &         0.00 \\  
-Cognitive &            . &            . &     2,680.61 &         0.13 &            . &            . &    -4,541.18 &         0.95 \\  
-NonCognitive &            . &            . &    -3,584.83 &         0.99 &            . &            . &    -1,352.32 &         0.79 \\  
-Constant &     2,523.10 &         0.25 &     3,699.61 &         0.37 &   -56,008.30 &         1.00 &   -86,767.50 &         1.00 \\  
-F-stat &        50.43 &            . &         7.21 &            . &        90.05 &            . &        20.04 &            . \\  
-R2 &         0.03 &            . &         0.06 &            . &         0.21 &            . &         0.34 &            . \\  
-Observations &     1,885.00 &            . &       370.00 &            . &     1,885.00 &            . &     1,883.00 &            . \\  
-DWH &            . &            . &         5.90 &            . &            . &            . &         3.11 &            . \\  
-pDWH &            . &            . &         0.05 &            . &            . &            . &         0.18 &            . \\  
+Mother'sEducation &     2,292.54 &         0.00 &     1,528.20 &         0.00 &       117.79 &         0.25 &       -47.06 &         0.50 \\  
+PIAT(5-7) &            . &            . &            . &            . &       262.38 &         0.00 &       447.61 &         0.00 \\  
+Education(30) &            . &            . &            . &            . &     3,722.75 &         0.00 &     4,202.69 &         0.00 \\  
+LaborIncome(21) &            . &            . &            . &            . &         0.62 &         0.00 &         0.82 &         0.00 \\  
+Cognitive &            . &            . &     2,859.63 &         0.00 &            . &            . &    -4,149.19 &         0.88 \\  
+NonCognitive &            . &            . &    -2,921.97 &         1.00 &            . &            . &      -590.26 &         0.75 \\  
+Constant &     2,840.27 &         0.00 &    11,377.06 &         0.00 &   -53,962.05 &         1.00 &   -78,072.63 &         1.00 \\  
+F-stat &        46.92 &            . &         4.89 &            . &        83.55 &            . &        18.31 &            . \\  
+R2 &         0.00 &            . &         0.04 &            . &         0.00 &            . &         0.00 &            . \\  
+Observations &         0.03 &            . &         0.04 &            . &         0.19 &            . &         0.33 &            . \\  
+DWH &     1,862.00 &            . &       350.00 &            . &     1,860.00 &            . &     1,862.00 &            . \\  
+pDWH &            . &            . &         4.18 &            . &            . &            . &         1.77 &            . \\  
+pDWH &            . &            . &         0.04 &            . &            . &            . &         0.34 &            . \\  
 \hline \hline \end{tabular}
 \end{table}
