--- a/output/cnlsy_endogdurb_si30y_inc_trans_pub_spool.tex
+++ b/output/cnlsy_endogdurb_si30y_inc_trans_pub_spool.tex
@@ -1,18 +1,19 @@
-% matrix: allsi30y_inc_trans_pub_spool file: cnlsy_endogdurb_si30y_inc_trans_pub_spool.tex   2 Nov 2016 12:16:33
+% matrix: allsi30y_inc_trans_pub_spool file: cnlsy_endogdurb_si30y_inc_trans_pub_spool.tex   8 Nov 2016 15:13:49
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-Mother'sEducation &      -457.46 &         0.56 &     8,259.13 &         0.04 &       985.13 &         0.41 &     9,344.69 &         0.02 \\  
-PIAT(5-7) &            . &            . &            . &            . &      -273.46 &         0.64 &      -506.25 &         0.70 \\  
-Education(30) &            . &            . &            . &            . &    -7,235.35 &         0.96 &    -5,622.52 &         0.84 \\  
-LaborIncome(21) &            . &            . &            . &            . &         0.17 &         0.40 &        -0.96 &         0.98 \\  
-Cognitive &            . &            . &    -8,525.66 &         0.83 &            . &            . &      -473.24 &         0.52 \\  
-NonCognitive &            . &            . &    18,373.65 &         0.03 &            . &            . &     6,585.57 &         0.22 \\  
-Constant &    34,777.07 &         0.14 &   -58,507.25 &         0.91 &   137,947.14 &         0.14 &    57,813.64 &         0.35 \\  
-F-stat &         1.02 &            . &         1.94 &            . &         1.88 &            . &         1.12 &            . \\  
-R2 &         0.00 &            . &         0.02 &            . &         0.01 &            . &         0.05 &            . \\  
-Observations &     1,145.00 &            . &       244.00 &            . &     1,145.00 &            . &     1,148.00 &            . \\  
-DWH &            . &            . &         1.86 &            . &            . &            . &         1.03 &            . \\  
-pDWH &            . &            . &         0.23 &            . &            . &            . &         0.45 &            . \\  
+Mother'sEducation &       366.18 &         0.38 &    10,450.96 &         0.00 &     2,337.63 &         0.12 &    10,634.87 &         0.00 \\  
+PIAT(5-7) &            . &            . &            . &            . &      -872.86 &         0.88 &      -364.63 &         0.50 \\  
+Education(30) &            . &            . &            . &            . &    -8,126.93 &         1.00 &    -6,206.13 &         0.88 \\  
+LaborIncome(21) &            . &            . &            . &            . &         0.79 &         0.25 &        -0.99 &         1.00 \\  
+Cognitive &            . &            . &    -9,680.93 &         0.88 &            . &            . &    -5,092.70 &         0.50 \\  
+NonCognitive &            . &            . &    20,921.34 &         0.00 &            . &            . &     9,015.29 &         0.12 \\  
+Constant &    30,414.71 &         0.00 &   -80,733.04 &         1.00 &   191,839.62 &         0.00 &    38,528.02 &         0.50 \\  
+F-stat &         0.14 &            . &         1.80 &            . &         1.06 &            . &         1.17 &            . \\  
+R2 &         0.75 &            . &         0.18 &            . &         0.49 &            . &         0.37 &            . \\  
+Observations &         0.00 &            . &         0.02 &            . &         0.01 &            . &         0.06 &            . \\  
+DWH &     1,101.00 &            . &       239.00 &            . &     1,100.00 &            . &     1,099.00 &            . \\  
+pDWH &            . &            . &         1.70 &            . &            . &            . &         0.71 &            . \\  
+pDWH &            . &            . &         0.26 &            . &            . &            . &         0.52 &            . \\  
 \hline \hline \end{tabular}
 \end{table}
