changes to a few of the table

--- a/output/abccare_endogdurb_si30y_inc_labor_scont_ready.tex
+++ b/output/abccare_endogdurb_si30y_inc_labor_scont_ready.tex
@@ -8,6 +8,8 @@ Labor Income (21) &            . &            . &            . &            . & 
 Cognitive &            . &            . &       758.28 &         0.43 &            . &            . &    -8,009.28 &         0.93 \\  
 Non Cognitive &            . &            . &      -342.62 &         0.52 &            . &            . &     7,275.49 &         0.09 \\  
 Constant &    10,239.82 &         0.28 &    16,530.50 &         0.22 &   -23,140.28 &         0.80 &   -80,679.09 &         0.96 \\  \\ \midrule
+$F$-stat &         \multicolumn{2}{c}{2.27} &              \multicolumn{2}{c}{1.80} &             \multicolumn{2}{c}{11.89} &               \multicolumn{2}{c}{7.91}  \\  
+$p$-value &         \multicolumn{2}{c}{0.42} &              \multicolumn{2}{c}{0.41} &             \multicolumn{2}{c}{0.42} &               \multicolumn{2}{c}{0.01}  \\  
 $R^2$ &         \multicolumn{2}{c}{0.03} &              \multicolumn{2}{c}{0.07} &             \multicolumn{2}{c}{0.30} &               \multicolumn{2}{c}{0.40}  \\  
 Observations &         \multicolumn{2}{c}{66} &          \multicolumn{2}{c}{51} &              \multicolumn{2}{c}{65} &             \multicolumn{2}{c}{63}  \\  \\ \midrule
 $F$-stat: exclude Cognitive, Non-Cognitive &              \multicolumn{4}{c}{1.70} &               \multicolumn{4}{c}{4.14}  \\  
