--- a/output/abccare_endogdurb_si30y_inc_labor_spool_ready.tex
+++ b/output/abccare_endogdurb_si30y_inc_labor_spool_ready.tex
@@ -8,6 +8,8 @@ Labor Income (21) &            . &            . &            . &            . & 
 Cognitive &            . &            . &     4,260.39 &         0.16 &            . &            . &     1,427.18 &         0.44 \\  
 Non Cognitive &            . &            . &     2,899.66 &         0.25 &            . &            . &     7,557.01 &         0.05 \\  
 Constant &     4,443.37 &         0.41 &     9,166.30 &         0.38 &   -78,053.28 &         0.95 &   -75,621.84 &         0.87 \\  \\ \midrule
+$F$-stat &         \multicolumn{2}{c}{2.50} &          \multicolumn{2}{c}{1.90} &             \multicolumn{2}{c}{5.87} &                 \multicolumn{2}{c}{5.37}  \\  
+$p$-value &         \multicolumn{2}{c}{0.29} &          \multicolumn{2}{c}{0.31} &             \multicolumn{2}{c}{0.29} &                 \multicolumn{2}{c}{0.01}  \\  
 $R^2$ &         \multicolumn{2}{c}{0.02} &          \multicolumn{2}{c}{0.04} &             \multicolumn{2}{c}{0.20} &                 \multicolumn{2}{c}{0.25}  \\  
 Observations &        \multicolumn{2}{c}{132} &        \multicolumn{2}{c}{100} &     \multicolumn{2}{c}{130} &         \multicolumn{2}{c}{133}  \\  \\ \midrule
 $F$-stat: exclude Cognitive, Non-Cognitive  &             \multicolumn{4}{c}{2.07} &               \multicolumn{4}{c}{2.92}  \\  
