--- a/output/abccare_endogdurb_si30y_inc_trans_pub_spool_ready.tex
+++ b/output/abccare_endogdurb_si30y_inc_trans_pub_spool_ready.tex
@@ -8,6 +8,8 @@ Labor Income (21) &            . &            . &            . &            . & 
 Cognitive &            . &            . &      -753.98 &         0.93 &            . &            . &       153.54 &         0.42 \\  
 Non Cognitive &            . &            . &       631.74 &         0.17 &            . &            . &       264.49 &         0.34 \\  
 Constant &     5,135.83 &         0.06 &     6,460.15 &         0.07 &    13,548.68 &         0.03 &    17,791.02 &         0.05 \\   \\ \midrule
+$F$-stat &         \multicolumn{2}{c}{1.78} &         \multicolumn{2}{c}{3.04} &               \multicolumn{2}{c}{3.86} &            \multicolumn{2}{c}{2.75}  \\  
+$p$-value &         \multicolumn{2}{c}{0.35} &         \multicolumn{2}{c}{0.12} &               \multicolumn{2}{c}{0.35} &            \multicolumn{2}{c}{0.09}  \\  
 $R^2$ &         \multicolumn{2}{c}{0.02} &         \multicolumn{2}{c}{0.10} &               \multicolumn{2}{c}{0.15} &            \multicolumn{2}{c}{0.18}  \\  
 Observations &       \multicolumn{2}{c}{133} &           \multicolumn{2}{c}{101} &         \multicolumn{2}{c}{135} &            \multicolumn{2}{c}{133}  \\  \\ \midrule
 $F$-stat: exclude Cognitive, Non-Cognitive &              \multicolumn{4}{c}{3.38} &             \multicolumn{4}{c}{1.23}  \\  
