--- a/output/abccare_endogdurb_si30y_inc_trans_pub_streat_ready.tex
+++ b/output/abccare_endogdurb_si30y_inc_trans_pub_streat_ready.tex
@@ -8,6 +8,8 @@ LaborIncome(21) &            . &            . &            . &            . &   
 Cognitive &            . &            . &      -421.59 &         0.75 &            . &            . &      -273.48 &         0.62 \\  
 Non Cognitive &            . &            . &      -825.26 &         0.95 &            . &            . &      -987.11 &         0.98 \\  
 Constant &     3,348.22 &         0.16 &     4,937.75 &         0.14 &     9,041.98 &         0.09 &     8,432.47 &         0.18 \\  \\ \midrule
+$F$-stat  &          \multicolumn{2}{c}{1.23} &            \multicolumn{2}{c}{2.59} &                  \multicolumn{2}{c}{1.81} &               \multicolumn{2}{c}{2.27}  \\  
+$p$-value  &          \multicolumn{2}{c}{0.45} &            \multicolumn{2}{c}{0.18} &                  \multicolumn{2}{c}{0.45} &               \multicolumn{2}{c}{0.25}  \\  
 $R^2$  &          \multicolumn{2}{c}{0.03} &            \multicolumn{2}{c}{0.15} &                  \multicolumn{2}{c}{0.13} &               \multicolumn{2}{c}{0.25}  \\  
 Observations &        \multicolumn{2}{c}{63} &               \multicolumn{2}{c}{49}  &             \multicolumn{2}{c}{65}  &         \multicolumn{2}{c}{63}  \\   \\ \midrule
 $F$-stat: exclude Cognitive, Non-Cognitive &                    \multicolumn{4}{c}{3.08} &                   \multicolumn{4}{c}{2.79}  \\  
