--- a/output/cnlsy_endogdurb_si30y_inc_labor_spool_ready.tex
+++ b/output/cnlsy_endogdurb_si30y_inc_labor_spool_ready.tex
@@ -1,14 +1,16 @@
 \begin{tabular}{lcccccccc} \toprule
  & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\
  & Estimate & $p$-value & Estimate & $p$-value  & Estimate & $p$-value  & Estimate & $p$-value  \\ \midrule 
-Mother's Education &     2,317.52 &         0.00 &     2,262.79 &         0.00 &       316.78 &         0.23 &       379.54 &         0.32 \\  
-PIAT (5-7) &            . &            . &            . &            . &       263.98 &         0.00 &       471.53 &         0.00 \\  
-Education (30) &            . &            . &            . &            . &     3,647.75 &         0.00 &     4,351.32 &         0.00 \\  
-Labor Income (21) &            . &            . &            . &            . &         0.68 &         0.00 &         0.79 &         0.00 \\  
-Cognitive &            . &            . &     2,680.61 &         0.13 &            . &            . &    -4,541.18 &         0.95 \\  
-Non Cognitive &            . &            . &    -3,584.83 &         0.99 &            . &            . &    -1,352.32 &         0.79 \\  
-Constant &     2,523.10 &         0.25 &     3,699.61 &         0.37 &   -56,008.30 &         1.00 &   -86,767.50 &         1.00 \\ \\ \midrule
-$R^2$ &         \multicolumn{2}{c}{0.03} &              \multicolumn{2}{c}{0.06} &               \multicolumn{2}{c}{0.21} &                \multicolumn{2}{c}{0.34}  \\  
-Observations &       \multicolumn{2}{c}{1,885} &            \multicolumn{2}{c}{370} &           \multicolumn{2}{c}{1,885} &          \multicolumn{2}{c}{1,883}   \\  \\ \midrule
-$F$-stat: exclude Cognitive, Non-Cognitive &                      \multicolumn{4}{c}{5.90} &                      \multicolumn{4}{c}{3.11}   \\  
-$p$-value &             \multicolumn{4}{c}{0.05} &                  \multicolumn{4}{c}{0.18}  \\    \bottomrule \end{tabular}
+Mother's Education &     2,292.54 &         0.00 &     1,528.20 &         0.00 &       117.79 &         0.25 &       -47.06 &         0.50 \\  
+PIAT (5-7) &            . &            . &            . &            . &       262.38 &         0.00 &       447.61 &         0.00 \\ 
+Education (30) &          . &            . &            . &            . &     3,722.75 &         0.00 &     4,202.69 &         0.00 \\  
+Labor Income (21) &            . &            . &            . &            . &         0.62 &         0.00 &         0.82 &         0.00 \\  
+Cognitive &            . &            . &     2,859.63 &         0.00 &            . &            . &    -4,149.19 &         0.88 \\  
+Non Cognitive &            . &            . &    -2,921.97 &         1.00 &            . &            . &      -590.26 &         0.75 \\   
+Constant &     2,840.27 &         0.00 &    11,377.06 &         0.00 &   -53,962.05 &         1.00 &   -78,072.63 &         1.00 \\   \\ \midrule
+$F$-stat &         \multicolumn{2}{c}{46.92} &              \multicolumn{2}{c}{4.89} &               \multicolumn{2}{c}{83.55} &                \multicolumn{2}{c}{18.31}  \\  
+$p$-value &         \multicolumn{2}{c}{0.00} &              \multicolumn{2}{c}{0.04} &               \multicolumn{2}{c}{0.00} &                \multicolumn{2}{c}{0.00}  \\  
+$R^2$ &         \multicolumn{2}{c}{0.03} &              \multicolumn{2}{c}{0.04} &               \multicolumn{2}{c}{0.19} &                \multicolumn{2}{c}{0.33}  \\  
+Observations &       \multicolumn{2}{c}{1,862} &            \multicolumn{2}{c}{350} &           \multicolumn{2}{c}{1,860} &          \multicolumn{2}{c}{1,862}   \\  \\ \midrule
+$F$-stat: exclude Cognitive, Non-Cognitive &                      \multicolumn{4}{c}{4.18} &                      \multicolumn{4}{c}{1.77}   \\  
+$p$-value &             \multicolumn{4}{c}{0.04} &                  \multicolumn{4}{c}{0.34}  \\    \bottomrule \end{tabular}
