--- a/output/cnlsy_endogdurb_si30y_inc_trans_pub_spool_ready.tex
+++ b/output/cnlsy_endogdurb_si30y_inc_trans_pub_spool_ready.tex
@@ -1,15 +1,17 @@
 \begin{tabular}{lcccccccc} \toprule
  & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\
  & Estimate & $p$-value & Estimate & $p$-value  & Estimate & $p$-value  & Estimate & $p$-value  \\ \midrule 
-Mother'sEducation &      -457.46 &         0.56 &     8,259.13 &         0.04 &       985.13 &         0.41 &     9,344.69 &         0.02 \\  
-PIAT(5-7) &            . &            . &            . &            . &      -273.46 &         0.64 &      -506.25 &         0.70 \\  
-Education(30) &            . &            . &            . &            . &    -7,235.35 &         0.96 &    -5,622.52 &         0.84 \\  
-LaborIncome(21) &            . &            . &            . &            . &         0.17 &         0.40 &        -0.96 &         0.98 \\  
-Cognitive &            . &            . &    -8,525.66 &         0.83 &            . &            . &      -473.24 &         0.52 \\  
+Mother'sEducation  &       366.18 &         0.38 &    10,450.96 &         0.00 &     2,337.63 &         0.12 &    10,634.87 &         0.00 \\  
+PIAT(5-7) &            . &            . &            . &            . &      -872.86 &         0.88 &      -364.63 &         0.50 \\  
+Education(30) &            . &            . &            . &            . &    -8,126.93 &         1.00 &    -6,206.13 &         0.88 \\  
+LaborIncome(21) &            . &            . &            . &            . &         0.79 &         0.25 &        -0.99 &         1.00 \\  
+Cognitive&            . &            . &    -9,680.93 &         0.88 &            . &            . &    -5,092.70 &         0.50 \\  
 NonCognitive &            . &            . &    18,373.65 &         0.03 &            . &            . &     6,585.57 &         0.22 \\  
-Constant &    34,777.07 &         0.14 &   -58,507.25 &         0.91 &   137,947.14 &         0.14 &    57,813.64 &         0.35 \\  \\ \midrule
-$R^2$ &         \multicolumn{2}{c}{0.00} &               \multicolumn{2}{c}{0.02} &                \multicolumn{2}{c}{0.01} &             \multicolumn{2}{c}{0.05}   \\  
-Observations &       \multicolumn{2}{c}{1,145} &              \multicolumn{2}{c}{244}  &       \multicolumn{2}{c}{1,145} &      \multicolumn{2}{c}{1,148}   \\  \\ \midrule
-$F$-stat: exclude Cognitive, Non-Cognitive &                \multicolumn{4}{c}{1.86} &                 \multicolumn{4}{c}{1.03}   \\  
-$p$-value  &                \multicolumn{4}{c}{0.23} &                \multicolumn{4}{c}{0.45}    \\  \bottomrule \end{tabular}
+Constant&            . &            . &    20,921.34 &         0.00 &            . &            . &     9,015.29 &         0.12 \\   \\ \midrule
+$F$-stat &         \multicolumn{2}{c}{0.14} &               \multicolumn{2}{c}{1.80} &                \multicolumn{2}{c}{1.06} &             \multicolumn{2}{c}{1.17}   \\  
+$p$-value &         \multicolumn{2}{c}{.75} &               \multicolumn{2}{c}{0.18} &                \multicolumn{2}{c}{0.49} &             \multicolumn{2}{c}{0.37}   \\  
+$R^2$ &         \multicolumn{2}{c}{0.00} &               \multicolumn{2}{c}{0.02} &                \multicolumn{2}{c}{0.01} &             \multicolumn{2}{c}{0.06}   \\  
+Observations &       \multicolumn{2}{c}{1,101} &              \multicolumn{2}{c}{239}  &       \multicolumn{2}{c}{1,100} &      \multicolumn{2}{c}{1,099}   \\  \\ \midrule
+$F$-stat: exclude Cognitive, Non-Cognitive &                \multicolumn{4}{c}{1.70} &                 \multicolumn{4}{c}{0.71}   \\  
+$p$-value  &                \multicolumn{4}{c}{0.26} &                \multicolumn{4}{c}{0.52}    \\  \bottomrule \end{tabular}
 
